# sis-engine

./: .gitignore  CHANGELOG.md  FILE_9523.json  PARKING_LOT.md  README.md  app.py  engine.py  pyproject.toml  run_campaign_validation.py
.devcontainer/: devcontainer.json
data/: README.md  aftermath_batch_01_draft.json  aftermath_batch_02_draft.json  aftermath_batch_03_draft.json  approach_batch_01_draft.json  core_complications.json  core_complications_v0_1.json  core_loot_situations 2.json  engage_batch_01_draft.json  one_loot_table.json
docs/: ARCH_campaign_integration.md  CAMPAIGN_RHYTHM_RUNNER_DESIGN.md  CAMPAIGN_RHYTHM_VALIDATION_ANALYSIS.md  CODE_REVIEW_2025_12_25.md  DATA_CONTRACT_story_vs_system_v0.1.md  DESIGN_multi_pack_ui_integration.md  DESIGN_voice_profiles_v0.1.md  E2E_AUDIT_2025_12_28.md  E2E_AUDIT_2025_12_28_FINAL.md  EXPORT_SPEC_story_vs_system_v0.1.md  GPT_CLINE_WORKFLOW.md  IMPLEMENTATION_REPORT_adaptive_weighting.md  IMPLEMENTATION_REPORT_cutoff_tuning.md  IMPLEMENTATION_SUMMARY_aftermath_content.md  IMPLEMENTATION_SUMMARY_content_pack_authoring_v1.0.md  IMPLEMENTATION_SUMMARY_event_generator_v1.0.md  IMPLEMENTATION_SUMMARY_loot_generator_v0.1.md  IMPLEMENTATION_SUMMARY_multi_pack_ui_v0.1.md  IMPLEMENTATION_SUMMARY_one_loot_table_v1.0.md  INTEGRATION_STATUS_flows_BCD.md  KEY_DOCS.md  One Loot Table.csv  One Loot Table.xlsx  PLAY_GUIDE_campaigns.md  REQUIREMENTS_campaign_mechanics_v0.1.md  REQUIREMENTS_campaign_mechanics_v0.2.md  REQUIREMENTS_core_pack_extension_v1.1.md  REQUIREMENTS_event_patterns_v0.1.md  REQUIREMENTS_json_scenario_import_export.md  (+12 more)
(+87 files in other folders)
