[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sis-tool-engine"
version = "1.0.0"
description = "SiS Tool Engine v1.0 - Spirals in Spirals pressure-driven campaign management system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["spar_engine*", "spar_campaign*"]
exclude = ["data*", "streamlit_harness*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
